@startuml iterator_paged_repository
title Iterator -- Lazy traversal of projects and tasks

skinparam classAttributeIconSize 0
skinparam backgroundColor white

interface JavaIterator <<Iterator>> {
  + hasNext() : boolean
  + next() : T
}

interface JavaIterable <<Iterable>> {
  + iterator() : Iterator
}

class PagedRepositoryIterator {
  - pageFetcher : Function
  - pageSize : int
  - currentPage : Page
  - inner : Iterator
  - nextPageIndex : int
  + hasNext() : boolean
  + next() : T
  - advance()
}

class ProjectScanner {
  - projectRepository : ProjectRepository
  + iterator() : Iterator
}

class ProjectTaskTreeIterator {
  - projects : Iterator
  - taskRepository : TaskRepository
  - currentTasks : Iterator
  + hasNext() : boolean
  + next() : Task
}

class GlobalReportService <<client>>
class AnalyticsService <<client>>
class ReportService <<client>>

JavaIterator <|.. PagedRepositoryIterator
JavaIterator <|.. ProjectTaskTreeIterator
JavaIterable <|.. ProjectScanner

ProjectScanner ..> PagedRepositoryIterator
ProjectTaskTreeIterator --> ProjectScanner
ProjectTaskTreeIterator ..> PagedRepositoryIterator

GlobalReportService --> ProjectScanner
GlobalReportService --> ProjectTaskTreeIterator
ReportService --> ProjectScanner
ReportService --> ProjectTaskTreeIterator
AnalyticsService --> PagedRepositoryIterator

note right of PagedRepositoryIterator
  Constant-memory traversal:
  one DB page at a time, no
  findAll() on the whole table.
end note

@enduml
